Set explicit version of nodejs and libvips

--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,16 @@
     }
   ],
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "d3-ease": "^0.7.0",
     "ecstatic": "^1.4.0",
     "express": "^4.13.4",
     "lodash": "^4.11.2",
+    "mosaic-mapnik": "^0.3.11",
+    "mosaic-pathmapper": "^0.1.2",
+    "mosaic-teleport": "^1.0.0",
+    "mosaic-transform": "^0.1.4",
+    "multer": "^1.1.0",
     "pg.js": "^4.1.1"
   },
   "scripts": {
