--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,6 @@
 FROM creativearea/node-libvips:5.10-8.3
+
+RUN apt-get update && apt-get install -y git
+
 WORKDIR /app/server
 ENTRYPOINT ["/bin/bash"]
