--- a/server/bower.json
+++ b/server/bower.json
@@ -9,7 +9,8 @@
     "page": "visionmedia/page.js#~1.6.3",
     "mosaic-state": "^0.1.0",
     "leaflet": "^0.7.7",
-    "Leaflet.utfgrid": "*"
+    "Leaflet.utfgrid": "*",
+    "jquery" : "^3.0.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
