--- a/server/bower.json
+++ b/server/bower.json
@@ -2,18 +2,10 @@
   "name": "polymer-starter-kit",
   "private": true,
   "dependencies": {
-    "iron-elements": "PolymerElements/iron-elements#1.0.0",
-    "paper-elements": "PolymerElements/paper-elements#1.0.1",
-    "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
-    "neon-elements": "PolymerElements/neon-elements#1.0.0",
-    "page": "visionmedia/page.js#~1.6.3",
-    "mosaic-state": "^0.1.0",
     "leaflet": "^0.7.7",
     "Leaflet.utfgrid": "*",
-    "jquery" : "^3.0.0"
+    "polymer": "^1.6.0"
   },
   "devDependencies": {
-    "web-component-tester": "*",
-    "test-fixture": "PolymerElements/test-fixture#^1.0.0"
   }
 }
