--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,6 @@
   ],
   "dependencies": {
     "body-parser": "^1.15.2",
-    "d3-ease": "^0.7.0",
     "ecstatic": "^1.4.0",
     "express": "^4.13.4",
     "lodash": "^4.11.2",
@@ -34,8 +33,7 @@
     "mosaic-pathmapper": "^0.1.2",
     "mosaic-teleport": "^1.0.1",
     "mosaic-transform": "^0.1.4",
-    "multer": "^1.1.0",
-    "pg": "^6.0.1"
+    "multer": "^1.1.0"
   },
   "scripts": {
     "postinstall": "node_modules/bower/bin/bower --allow-root install",
