--- a/services/sandbox/package.json
+++ b/services/sandbox/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mosaic-docker-server",
+  "name": "sandbox-web-app",
   "version": "0.0.1",
   "main": "index.js",
-  "description": "OSM GeoJson service",
   "url": "",
   "keywords": [
+    "map",
+    "osm",
     "geojson"
   ],
   "licenses": [
@@ -23,19 +24,10 @@
     }
   ],
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "ecstatic": "^1.4.0",
-    "express": "^4.13.4",
-    "multer": "^1.1.0"
+    "mosaic-teleport": "^1.0.1"
   },
   "scripts": {
-    "postinstall": "node ./install-services.js",
-    "start": "node ./index.js -port 9876 -path ''"
   },
   "devDependencies": {
-    "bower": "^1.7.9"
-  },
-  "config": {
-    "unsafe-perm": true
   }
 }
