--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "multer": "^1.1.0"
   },
   "scripts": {
-    "postinstall": "node ./install-services.js",
+    "postinstall": "node ./install-applications.js",
     "start": "node ./index.js -port 9876 -path ''"
   },
   "devDependencies": {
